--- a/packages/action/tsconfig.json
+++ b/packages/action/tsconfig.json
@@ -115,7 +115,9 @@
     // 自动生成声明文件
     "declarationDir": "dist",
     // 声明文件输出的目录
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
     // 只输出声明文件，不转译ts文件
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
